# electra

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md
include/: lexer.hpp  parser.hpp
src/: lexer.cpp  main.cpp  parser.cpp
tests/: begin.cele  test.cele  test.eca
tests/lexer/: basic.elec  basic.expected
tests/parser/: basic.elec  basic.expected
